# ChainLocker

./: .env.example  .gitignore  Anchor.toml  CONTRIBUTOR.md  Cargo.toml  README.md  START_DEMO.md
backend/: Cargo.toml
backend/src/: config.rs  error.rs  main.rs  models.rs  state.rs
backend/src/routes/: credentials.rs  documents.rs  health.rs  mod.rs  system.rs
backend/src/services/: audit.rs  ipfs.rs  mod.rs  solana.rs  storage.rs
backend/static/: app.js  index.html  styles.css
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: chainlocker.js
frontend/src/components/: AnimatedSection.jsx  Navbar.css  Navbar.jsx  Toast.jsx
frontend/src/lib/: documentSecurity.js
frontend/src/pages/: Dashboard.css  Dashboard.jsx  Issue.css  Issue.jsx  Landing.css  Landing.jsx  PortalPages.css  StudentDashboard.jsx  UniversityPortal.jsx  Upload.css  Upload.jsx  Verify.css  Verify.jsx  VerifyPortal.jsx
programs/chainlocker_registry/: Cargo.toml
programs/chainlocker_registry/src/: lib.rs
