[package]
name = "chainlocker-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30.1"
axum = { version = "0.7.6", features = ["multipart", "macros"] }
base64 = "0.22.1"
bincode = "1.3.3"
borsh = { version = "1.5.1", features = ["derive"] }
chainlocker_registry = { package = "chainlocker-registry", path = "../programs/chainlocker_registry", features = ["no-entrypoint"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
mime_guess = "2.0.5"
reqwest = { version = "0.12.7", default-features = false, features = ["json", "multipart", "native-tls", "stream"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
solana-sdk = "1.18.26"
subtle = "2.6.1"
thiserror = "1.0.64"
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["io"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-full", "cors", "fs", "request-id", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
